testsuite/tests/properties/invalid_lambda_arg_type/filter_index.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items
        .filter((e: Example, i: Bool) => not e.is_null or i == 0)
        .map((e: Example) => e.as_bare_entity)
}
